--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -133,16 +133,15 @@
 {% endblock jsv %}
 {% block content %}
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-xxl py-5">
+        <!-- Page Header Start -->
         <div class="container">
-            <h1 class="display-3 mb-3 animated slideInDown">My closet</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb mb-0">
-                    <li class="breadcrumb-item"><a class="text-body" href="{% url 'index' %}">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-body" href="{% url 'index' %}">Clothes</a></li>
-                    <li class="breadcrumb-item text-dark active" aria-current="page">My closet</li>
-                </ol>
-            </nav>
+            <div class="col-lg-6">
+                <div class="section-header text-start mb-5 wow fadeInUp" style="bottom: 50px;top: 100px;" data-wow-delay="0.1s">
+                    <h1 class="display-5 mb-3 jamsil" style="font-size: 4vw">내 옷장</h1>
+                    <p class="jamsil">내 옷들을 등록하고 한 눈에 관리하세요!</p>
+                 </div>
+            </div>
         </div>
     </div>
     <!-- Page Header End -->
@@ -153,10 +152,6 @@
         <div class="container">
             <div class="row g-0 gx-5 align-items-end">
                 <div class="col-lg-6">
-                    <div class="section-header text-start mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                        <h1 class="display-5 mb-3">My closet</h1>
-                        <p>내 옷들을 등록하고 한 눈에 관리하세요!</p>
-                    </div>
                 </div>
                 <div class="col-lg-6 text-start text-lg-end wow slideInRight" data-wow-delay="0.1s">
                     <ul class="nav nav-pills d-inline-flex justify-content-end mb-5">
@@ -211,7 +206,7 @@
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     
                     <div class="row g-4">
-                        {% for clothes in o %}
+                        {% for clothes in c %}
                         <a href="{% url 'detail_closet' user.username %}">
                             
                             <img src="{{ clothes.imgfile }}" id="{{forloop.counter}}" width="100%" height="auto" alt="{{ clothes.imgfile }}">  
@@ -230,7 +225,7 @@
                                 <th>업로드 된 시간</th>
                             </tr>
 
-                            {% for clothes in o %}
+                            {% for clothes in c %}
                             <tr>
                                 <td>{{ clothes.name }}</td>
                                 <td>{{ clothes.type1 }}</td>
