--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -10,125 +10,10 @@
 {% endblock closet %}
 
 {% block jsv %}
-<script>
-    ( /* att_zone : 이미지들이 들어갈 위치 id, btn : file tag id */
-      imageView = function imageView(att_zone, btn){
-    
-        var attZone = document.getElementById(att_zone);
-        var btnAtt = document.getElementById(btn)
-        var sel_files = [];
-        
-        // 이미지와 체크 박스를 감싸고 있는 div 속성
-        var div_style = 'display:block;position:relative;'
-                      + 'margin:5px;border:1px solid #fff;z-index:1';
-        // 미리보기 이미지 속성
-        var img_style = 'width:30%;height:auto;z-index:none;visibilty:visible;animation-delay:0.1s;animation-name:fadeInup;vertical-align: middle;'
-        // 이미지안에 표시되는 체크박스의 속성
-        var chk_style = 'width:30px;height:30px;position:absolute;font-size:24px;'
-                      + 'bottom:0px;z-index:999;background-color:white;color:#f00';
-      
-        btnAtt.onchange = function(e){
-          var files = e.target.files;
-          var fileArr = Array.prototype.slice.call(files)
-          for(f of fileArr){
-            imageLoader(f);
-          }
-        }  
-        
-      
-        // 탐색기에서 드래그앤 드롭 사용
-        attZone.addEventListener('dragenter', function(e){
-          e.preventDefault();
-          e.stopPropagation();
-        }, false)
-        
-        attZone.addEventListener('dragover', function(e){
-          e.preventDefault();
-          e.stopPropagation();
-          
-        }, false)
-      
-        attZone.addEventListener('drop', function(e){
-          var files = {};
-          e.preventDefault();
-          e.stopPropagation();
-          var dt = e.dataTransfer;
-          files = dt.files;
-          for(f of files){
-            imageLoader(f);
-          }
-          
-        }, false)
-        
-    
-        
-        /*첨부된 이미리들을 배열에 넣고 미리보기 */
-        imageLoader = function(file){
-          sel_files.push(file);
-          var reader = new FileReader();
-          reader.onload = function(ee){
-            let img = document.createElement('img')
-            img.setAttribute('style', img_style)
-            img.src = ee.target.result;
-            attZone.appendChild(makeDiv(img, file));
-          }
-          
-          reader.readAsDataURL(file);
-        }
-        
-        /*첨부된 파일이 있는 경우 checkbox와 함께 attZone에 추가할 div를 만들어 반환 */
-        makeDiv = function(img, file){
-          var div = document.createElement('div')
-          div.setAttribute('style', div_style)
-          
-          var btn = document.createElement('input')
-          btn.setAttribute('type', 'button')
-          btn.setAttribute('value', 'x')
-          btn.setAttribute('delFile', file.name);
-          btn.setAttribute('style', chk_style);
-          btn.onclick = function(ev){
-            var ele = ev.srcElement;
-            var delFile = ele.getAttribute('delFile');
-            for(var i=0 ;i<sel_files.length; i++){
-              if(delFile== sel_files[i].name){
-                sel_files.splice(i, 1);      
-              }
-            }
-            
-            dt = new DataTransfer();
-            for(f in sel_files) {
-              var file = sel_files[f];
-              dt.items.add(file);
-            }
-            btnAtt.files = dt.files;
-            var p = ele.parentNode;
-            attZone.removeChild(p)
-          }
-          div.appendChild(img)
-          div.appendChild(btn)
-          return div
-        }
-      }
-    )('att_zone', 'btnAtt')
-    
-</script>
-<script>
-    $(document).ready(function() {
-        $("#chk_submit").on('click', function(){
-            var chk_arr = [];
 
-            $("input[name=nb[]]:checked").each(function(){
-                chk_arr.push($(this).val());
-            
-            });
-
-            alert(chk_arr);
-        });
-
-    })(jQuery);
-</script>
 <script>
-     
+    var chk_img = '';
+
 </script>
 {% endblock jsv %}
 {% block content %}
@@ -206,126 +91,59 @@
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     
                     <div class="row g-4">
-                        <form action="{% url 'detail_closet' user.username %}" method="POST" >
-                            
-                            <div>
-                                {% for clothes in c %}
+                        {% for clothes in c %}
+                        <div class="col-xl-3 col-lg-4 col-md-6">
+                            <div class="product-item">
+
+                                {% csrf_token %}
+                                <form action="{% url 'detail_closet' user.first_name %}" method="get" >
+                                       
                                     {% if clothes.imgfile %}
-                                    <img src="{{ clothes.imgfile.url }}" id="{{forloop.counter}}" width="30%" height="auto" margin="10%" padding="10%" alt="{{ clothes.imgfile }}">  
+                                        
+
+                                            <input type="hidden" name="chk_img" value="{{clothes.name}}">
+                                            <input type="image" src="{{ clothes.imgfile.url }}" width="100%" height="auto" margin="10%" padding="10%" alt="{{ clothes.imgfile }}">  
+                                        
                                     {% endif %}
-                                {% endfor%}
+                                    
+                                    
+                                </form>
+                               
                             </div>
-                                
-                            
-                        </form>
-                
+                        </div>
+                        {% endfor %}
+
                     </div>
                     
                 </div>
                 
                 <div id="tab-2" class="tab-pane fade show p-0">
                     <div class="row g-4">
+                        {% for clothes in c %}
                         <div class="col-xl-3 col-lg-4 col-md-6">
                             <div class="product-item">
-                                {% for clothes in c %}
-                                    {% if clothes.imgfile%}
+                            
+                                {% if clothes.imgfile%}
                                 <div class="position-relative bg-light overflow-hidden">
                                 
                                     <img class="img-fluid w-100" src="{{ clothes.imgfile.url }}" alt="{{ clothes.imgfile }}">
                                     
                                 </div>
+                                {% endif %}
                                 <div class="text-center p-4">
                                     <a class="d-block p mb-2 text-primary" href="{% url 'detail_closet' user.username}">{{ clothes.name }}</a>   <!--옷장 이름 클릭하면 detail_closet으로 이동-->
                                 </div>
-                                    {% endif %}
-                                {% endfor %}
+                            
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
-                            <div class="product-item">
-                                <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="{% static 'img/product-2.jpg' %}" alt="">
-                                    <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
-                                </div>
-                                <div class="text-center p-4">
-                                    <a class="d-block p mb-2" href="{% url 'detail_closet' user.first_name}">Fresh Tomato</a>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
-                            <div class="product-item">
-                                <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="{% static 'img/product-2.jpg' %}" alt="">
-                                    
-                                </div>
-                                <div class="text-center p-4">
-                                    <a class="d-block p mb-2" href="">Fresh Tomato</a>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
-                            <div class="product-item">
-                                <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="{% static 'img/product-2.jpg' %}" alt="">
-                                    
-                                </div>
-                                <div class="text-center p-4">
-                                    <a class="d-block p mb-2" href="">Fresh Tomato</a>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
-                            <div class="product-item">
-                                <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="{% static 'img/product-2.jpg' %}" alt="">
-                                </div>
-                                <div class="text-center p-4">
-                                    <a class="d-block p mb-2" href="">Fresh Tomato</a>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
-                            <div class="product-item">
-                                <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="{% static 'img/product-2.jpg' %}" alt="">
-                                </div>
-                                <div class="text-center p-4">
-                                    <a class="d-block p mb-2" href="">Fresh Tomato</a>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
-                            <div class="product-item">
-                                <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="{% static 'img/product-2.jpg' %}" alt="">
-                                </div>
-                                <div class="text-center p-4">
-                                    <a class="d-block p mb-2" href="">Fresh Tomato</a>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-4 col-md-6">
-                            <div class="product-item">
-                                <div class="position-relative bg-light overflow-hidden">
-                                    <img class="img-fluid w-100" src="{% static 'img/product-2.jpg' %}" alt="">
-                                </div>
-                                <div class="text-center p-4">
-                                    <a class="d-block p mb-2" href="">Fresh Tomato</a>
-                                    
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
+                        
                         <div class="col-12 text-center">
                             <a class="btn btn-primary rounded-pill py-3 px-5" href="">Browse More Products</a>
                         </div>
                     </div>
                 </div>
+
                 <div id="tab-3" class="tab-pane fade show p-0">
                     <div class="row g-4">
                         <div class="col-xl-3 col-lg-4 col-md-6">
